# manipulation_exp

./: 1r_2link.world  README.md  icub.world  icub_1r1p.world  icub_1r_2link.world  icub_beer.world  marker_camera.world  wall_fb_world.world
exploration/: CMakeLists.txt  exploration.kdev4  left_exploration_init.ini  right_exploration_init.ini
exploration/.kdev4/: exploration.kdev4
exploration/include/: exploration.h  exploration_module.h
exploration/src/: exploration.cpp  exploration_module.cpp  main.cpp
manipulation/: CMakeLists.txt  coupling.sh  manipulation.kdev4  manipulation_init.ini  motor_control.sh  package.xml  pri_guimotor.posbody  pri_yarpmotorgui.ini  prismatic_motor_control.sh  rev_loop.posbody  revolute_force_control.sh  revolute_motor_control.sh  sample.sh  simple_control_action.posleft_arm  simple_control_action.posright_arm
manipulation/.kdev4/: manipulation.kdev4
manipulation/data/: fonetestpdata2.txt  fonetestpdata4.txt  fonetestrdata2.txt  fonetestrdata3.txt
manipulation/data/WORKING/: dgnewpmotion1.txt  dgnewpmotion2.txt  dgnewrmotion1.txt  newrmotion1.txt  newrmotion6.txt  newrmotion7.txt  newrmotion8.txt  newrmotion9.txt
manipulation/data/axis/: onlyp.txt  onlyp1.txt  onlyp2.txt  onlyp_str-.txt  onlyp_str.txt  onlyp_str1.txt  onlyp_str2.txt  onlyp_str_ext.txt  onlyr.txt  onlyr1.txt  onlyr_fast2.txt  onlyr_slow.txt  rsingle.txt  rswing.txt  still1.txt  still2.txt  still3.txt
manipulation/data/final_testing_data/: onetestpdata1.txt  onetestpdata2.txt  onetestpdata3.txt  onetestrdata3.txt  onetestrdata4.txt
manipulation/data/focreapplied_bkp/: fonetestpdata1.txt  fonetestpdata2.txt  fonetestpdata3.txt  fonetestpdata4.txt  fonetestpdata5.txt  fonetestrdata1.txt  fonetestrdata2.txt  fonetestrdata3.txt  fonetestrdata4.txt  fonetestrdata5.txt
manipulation/data/ft_testing/: 1.txt  2.txt  3.txt  check.txt  check_old_time.txt  ext1.txt  ext2.txt  fb_new1.txt  fb_new2.txt  fb_new3.txt  force_check.txt  force_check1.txt  force_check2.txt  force_check3.txt  force_check4.txt  force_check5.txt  ft1.txt  ft10.txt  ft2.txt  ft3.txt  ft4.txt  ft5.txt  ft6.txt  ft6.txy  ft7.txt  ft8.txt  ft9.txt  ft_check.txt  new1.txt  new2.txt  new3.txt  pmotion1.txt  pmotion_check.txt  pmotion_check1.txt  pmotion_new1.txt  pmotion_time.txt  rmotion.txt  rmotion1.txt  rmotion2.txt  rstill.txt  (+3 more)
manipulation/data/link_diff/: onlyp_fast.txt  onlyp_slow.txt  onlyp_slow2.txt  onlyp_str.txt  onlyr_fast.txt  onlyr_slow.txt  still1.txt  still2.txt  still3.txt
manipulation/data/motor_control/: rcontrol.txt  rcontrol1.txt  rcontrol_nop.txt  rcontrol_nop1.txt
manipulation/data/new_1p_2link/: 1.txt  float.txt  float1.txt  lock.txt  pri2.txt  pri_ext.txt  pri_ext2.txt  still.txt
manipulation/data/old/: 0.txt  1.txt  2.txt  3.txt  4.txt  fb_P_motion_cc_data.txt  fb_P_motion_cc_data1.txt  fb_P_motion_data.txt  fb_P_motion_data1.txt  fb_R_motion_data.txt  fb_R_motion_data1.txt  ne2.tct  only_vision.txt  pose_motion.txt  space corrected.txt  still_data.txt  vis_motion1.txt  vis_motion2.txt
manipulation/data/onetestdata/: onetestpdata1.txt  onetestpdata2.txt  onetestrdata.txt  onetestrdata1.txt  onetestrdata2.txt  onetestrdata3.txt  onetestrdata4.txt  onetestrdata5.txt
manipulation/data/trajectories/: paxis.txt  paxis1.txt  paxis2.txt  paxis4.txt  pcontrol.txt  pcontrol_fast.txt  pcontrol_nor.txt  rcontrol.txt  rcontrol_fast.txt  rcontrol_nop.txt  rcontrol_nop_fast.txt  rcontrol_nop_fast1.txt  rcontrol_nop_fast2.txt  still1.txt  still2.txt  still3.txt
manipulation/data/wall/: wall_motion_P1.txt  wall_motion_P2.txt  wall_motion_P3.txt  (+7 more)
manipulation/include/: manipulation.h  manipulation_module.h
manipulation/ini_files/: attach_grasp_home.ini  manipulation_init.ini  rev_yarpmotorgui.ini
manipulation/src/: main.cpp  manipulation.cpp  manipulation_module.cpp
(+1756 files in other folders)
