<?xml version="1.0"?>
<package>
  <name>manipulation</name>
  <author>yeshi</author>
  <maintainer email="you@yourdomain.tld">yeshi</maintainer>
  <description>manipulation package</description>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
